# portfolio-tracker

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 20260612_0001_add_phase_2_market_data_tables.py  20260612_0002_add_phase_3_trade_sync_tables.py  20260612_0003_add_phase_4_wallet_and_earn_tables.py  20260612_0004_add_phase_5_accounting_tables.py  20260613_0005_add_phase_6_portfolio_snapshots.py  20260613_0006_add_auth_settings_and_balances.py  20260613_0007_add_sync_progress_p2p_and_funding.py
backend/app/: config.py  logging.py  main.py  worker.py
backend/app/accounting/: __init__.py  cost_basis.py  events.py  ledger_builder.py  lots.py  pnl.py  rewards.py
backend/app/api/: dependencies.py  routes_auth.py  routes_deposits.py  routes_earn.py  routes_health.py  routes_lots.py  routes_manual_adjustments.py  routes_portfolio.py  routes_settings.py  routes_symbols.py  routes_sync.py
backend/app/binance/: __init__.py  client.py  endpoints.py  rate_limit.py  signing.py
backend/app/db/: models.py  session.py
backend/app/ingestion/: __init__.py  binance_records.py  sync_account.py  sync_deposits.py  sync_earn.py  sync_funding.py  (+3 more)
backend/tests/: test_accounting.py  test_auth.py  test_binance_client.py  test_config.py  test_deposit_sync.py  test_earn_sync.py  test_funding_sync.py  test_health.py  test_portfolio_snapshots.py  test_price_sync.py  test_sync_service.py  test_trade_sync.py
(+28 files in other folders)
