[project]
name = "binance-spot-portfolio-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for a Binance Spot portfolio tracker."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.13.3,<2.0",
    "fastapi>=0.115.0,<1.0",
    "httpx>=0.27.2,<1.0",
    "pydantic-settings>=2.6.0,<3.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "sqlalchemy>=2.0.35,<3.0",
    "structlog>=24.4.0,<26.0",
    "uvicorn[standard]>=0.32.0,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0",
    "pytest-cov>=5.0.0,<7.0",
    "ruff>=0.7.1,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
